--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <div>
             <p class="textcolor">Simplify insurance.</p>
             <h2>Inspect your insurance. Buy what you need.</h2>
+            <h2>Click on 'Talk to RIA' to chat with the chatbot</h2>
             <nav class="nav-menu d-none d-lg-block">
               <ul><li class="get-started"><a href="#" onclick="openChatbot();">Talk to RIA</a></li></ul>
             </nav>
