Spell checking and Beta testing

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container d-flex">
 
       <div class="logo mr-auto">
-        <a href="index.html"><img src="./static/assets/img/logo.png" alt="" class="img-fluid"></a> 
+        <a href="index.html"><img src="./static/assets/img/logo.png" alt="" class="img-fluid"></a><p class="predicttextcolor">  Beta testing</p>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -163,7 +163,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#accordion-list-1">Who is this app for? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-1" class="collapse show" data-parent=".accordion-list">
                 <p>
-                  This App is for people who want to undrestand health insurance products
+                  This App is for people who want to understand health insurance products
                 </p>
               </div>
             </li>
@@ -181,16 +181,16 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#accordion-list-3" class="collapsed">I dont think the suggestion provided by bot is right for me <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-3" class="collapse" data-parent=".accordion-list">
                 <p>
-                  Like we said we are small group of people coming up with the application. We are working really hard to on tech to provide the right advise. If you are not satifies please email us we will help you with right advise.
+                  Like we said we are small group of people coming up with the application. We are working really hard to on tech to provide the right advice. If you are not satisfies please email us we will help you with right advice.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#accordion-list-4" class="collapsed">I dont want to get spams <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#accordion-list-4" class="collapsed">I don't want to get spams <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-4" class="collapse" data-parent=".accordion-list">
                 <p>
-                  Nope, we will not spam you. we will call only if you ask us to call.
+                  Nope, we will not spam you. We will call only if you ask us to call.
                 </p>
               </div>
             </li>
